# hpgl-server

./: CMakeLists.txt  README.md
lib/: device._hpp  device.cpp  job.cpp  job.hpp
src/: main.cpp
